--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.2",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "psfd-dev/exponent-server-sdk-php": "^1.2",
+        "sbkl/laravel-expo-push-notifications": "^1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
